# superconduct-tc-reg

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
configs/: config.yaml  create_ete_model.yaml  preprocess.yaml  process_data.yaml  train.yaml
configs/dataset/: raw.yaml  train_ho_hd_sc-std-cfs.yaml  train_ho_hd_sc-std.yaml  train_ho_hd_sc.yaml
configs/dir/: cluster.yaml  home.yaml  relative.yaml  workstation.yaml
configs/experiment/: 1-gbdt_hopt.yaml  2-dnn_hopt.yaml  3-gbdt_uncertainty.yaml  gbdt_hopt.yaml  hopt_SGD.yaml
configs/lr_scheduler/: ExponentialLR.yaml  ReduceLROnPlateau.yaml
configs/mlflow/: local_cluster.yaml  local_work.yaml  scads_service.yaml
configs/model/: dnn.yaml
configs/optimizer/: AdamW.yaml  SGD.yaml
configs/pipeline/: nn.yaml  xgb.yaml
configs/pipeline/early_stopping/: gbdt_val.yaml
configs/pipeline/model/: dnn.yaml  gbdt.yaml  (+1 more)
configs/preprocessing/: ho_hd_scale.yaml  ho_hd_scale_pca.yaml  ho_hd_scale_std.yaml  ho_hd_scale_std_cfs.yaml  scale.yaml
configs/scaler/: min_max.yaml
configs/split/: bootstrap.yaml  cv.yaml  random_split.yaml
configs/target_scaler/: exp.yaml  min_max.yaml  standard.yaml
configs/tracking/: mlflow_dagshub.yaml  mlflow_local.yaml  mlflow_service.yaml  mlflow_workstation_local.yaml
configs/trainer/: cpu.yaml  gpu.yaml
data/raw/: .gitignore  superconductivity_data.dvc
notebooks/: 1-EDA.ipynb  3-model-eval-dnn-pca.ipynb
scripts/: download_data.sh  process_data.sh
src/superconduct_tc_reg/: __main__.py  folds_gen.py  model_module.py  train.py  utils.py
(+20 files in other folders)
